--- a/main-styles.css
+++ b/main-styles.css
@@ -384,8 +384,6 @@ line-height: normal;
     height: 42px;
 }
 
-/* Additional styles and adjustments as needed */
-
 .select-pass-button {
     position: absolute;
     bottom: 32px;
@@ -525,18 +523,36 @@ line-height: normal;
     }
 }
 
-/* Additional styles for the homepage */
+/* HOMEPAGE */
 
+/* Styles for the hero section */
 .hero {
-    background-image: url('images/hero-image.jpg');
+    display: flex;
+    align-items: center;
+    background-color: #fff;
     background-size: cover;
     background-position: center;
-    text-align: center;
-    padding: 120px 180px; /* Adjust padding as needed */
-    border: none;
+    padding: 40px;
     border-radius: 24px;
-    margin: 16px;
-    color: #FFF; /* Text color for the hero section */
+    margin: 32px;
+}
+
+.hero-image {
+    flex: 1;
+    border-radius: 24px 0 0 24px;
+    overflow: hidden; /* Hide any overflow if the image is larger */
+}
+
+.hero-image img {
+    max-width: 100%; /* Set a maximum width to fit the container */
+    height: auto;
+}
+
+.hero-content {
+    flex: 1;
+    border-radius: 0 24px 24px 0;
+    padding: 20px;
+    color: #000;
 }
 
 .hero h1 {
@@ -548,8 +564,8 @@ line-height: normal;
 .hero p {
     font-size: 24px;
     font-weight: 400;
-    margin-bottom: 40px;
 }
+
 
 
 .featured-classes {
@@ -582,6 +598,7 @@ line-height: normal;
     height: auto;
     border-radius: 8px;
     margin-bottom: 10px;
+    filter: grayscale(100);
 }
 
 
@@ -625,24 +642,103 @@ line-height: normal;
     background-color: #9b9494; /* Change background color on hover */
 }
 
-.instructors {
+/* Styles for the team members container */
+.team-members {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
-    margin-top: 40px;
+    margin: 40px;
 }
 
-.instructor-card {
-    flex: 0 0 calc(33.33% - 20px); /* Adjust the percentage width */
+/* Styles for individual team members */
+.team-member {
+    flex: 0 0 calc(25% - 20px);
     background-color: #FFF;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+
+.team-member:hover {
+    transform: translateY(-5px);
+}
+
+.team-member img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 0;
+    transition: transform 0.3s ease;
+}
+
+.member-info {
+    padding: 20px;
     text-align: center;
 }
 
-.instructor-card img {
+.member-info h3 {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+.member-info p {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0;
+}
+
+/* Styles for the "What is Zumba?" section */
+.about-zumba {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 40px;
+    padding-left: 20%;
+    padding-right: 20%;
+    text-align: center;
+}
+
+.about-zumba p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.learn-more-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #B7BFA9;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.learn-more-button:hover {
+    background-color: #6e7466;
+}
+
+/* Styles for the "Latest News" section */
+.news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center the items horizontally */
+    gap: 20px;
+    margin: 40px;
+}
+
+.news-article {
+    flex: 0 0 calc(50% - 10px);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center; /* Center the content inside each article */
+}
+
+.news-article img {
     width: 100%;
     max-width: 100%;
     height: auto;
@@ -650,52 +746,147 @@ line-height: normal;
     margin-bottom: 10px;
 }
 
-.instructor-card h3 {
+.news-article h3 {
     font-size: 24px;
     font-weight: 700;
-    margin: 10px 0;
-}
-
-.instructor-card p {
-    font-size: 18px;
-    font-weight: 400;
-    margin: 0;
-}
-
-/* Styles for Upcoming Events */
-.events {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
-    margin-top: 40px;
-}
-
-.event-card {
-    flex: 0 0 calc(33.33% - 20px); /* Adjust the percentage width */
-    background-color: #FFF;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.event-card img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
     margin-bottom: 10px;
 }
 
-.event-card h3 {
-    font-size: 24px;
-    font-weight: 700;
-    margin: 10px 0;
+.news-article p {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 10px;
 }
 
-.event-card p {
-    font-size: 18px;
-    font-weight: 400;
-    margin: 0;
+.read-more-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #B7BFA9;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
+
+.read-more-button:hover {
+    background-color: #6e7466;
+}
+
+
+/* Styles for the "About Us" section */
+.about {
+    padding: 40px;
+    text-align: center;
+}
+
+.about h1 {
+    font-size: 36px;
+    color: #333; /* Dark gray text color */
+}
+
+.about p {
+    font-size: 18px;
+    color: #666; /* Medium gray text color */
+}
+
+/* Styles for the "Origins" section */
+.origins {
+    background-color: #FFF; /* White background */
+    padding: 40px;
+}
+
+.origins h2 {
+    font-size: 36px; /* Larger font size for emphasis */
+    color: #6e7466; /* Reddish text color for a vibrant look */
+    margin-bottom: 20px; /* Add some spacing below the heading */
+}
+
+.origins p {
+    font-size: 20px;
+    color: #333; /* Dark gray text color for readability */
+    margin-bottom: 15px; /* Add spacing between paragraphs */
+}
+
+/* Style for the origins image */
+.origins-image {
+    max-width: 100%; /* Ensure the image doesn't exceed its container */
+    width: 800px;
+    border-radius: 8px; /* Add a slight border radius for a modern look */
+}
+
+/* Add some spacing between the image and text */
+.origins-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+/* Styles for the "Studio's Story" section */
+.studio-story {
+    background-color: #FFF; /* White background */
+    padding: 40px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.studio-story h2 {
+    font-size: 36px; /* Larger font size for emphasis */
+    color: #6e7466; /* Reddish text color for a vibrant look */
+    margin-bottom: 20px; /* Add some spacing below the heading */
+}
+
+.studio-story p {
+    font-size: 20px;
+    color: #333; /* Dark gray text color for readability */
+    margin-bottom: 15px; /* Add spacing between paragraphs */
+}
+
+/* Style for the studio image */
+.studio-image img {
+    max-width: 100%; /* Ensure the image doesn't exceed its container */
+    width: 800px;
+    border-radius: 8px; /* Add a slight border radius for a modern look */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow */
+}
+
+/* Add some spacing between the image and text */
+.studio-content {
+    flex: 1;
+    text-align: left;
+    padding-right: 20px;
+}
+
+/* Styles for the "Mission" section */
+.mission {
+    padding: 40px;
+    text-align: center;
+}
+
+.mission h2 {
+    font-size: 36px; /* Larger font size for emphasis */
+    margin-bottom: 20px; /* Add some spacing below the heading */
+}
+
+.mission p,.mission ul li  {
+    font-size: 24px;
+    margin-bottom: 15px; /* Add spacing between paragraphs */
+    color: black;
+}
+
+.mission ul {
+    list-style-type: disc; /* Use bullet points for the list */
+    text-align: left;
+    margin-left: 20px; /* Add some indentation for the list items */
+}
+
+.mission ul li {
+    margin-bottom: 10px; /* Add spacing between list items */
+}
+
+
